implement svgNest packing. Now returns path to svg file. Result postprocessing needed
